# sealed-env-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml  snap-publish.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: credstore.rs  init.rs  lib.rs  main.rs  workspace.rs
app/src-tauri/src/sealed/: crypto.rs  errors.rs  format.rs  mod.rs  totp.rs
app/src/components/: HealthSidebar.tsx  InitWizard.tsx  ModeBadge.tsx  RecentProjects.tsx  SettingsModal.tsx  Titlebar.tsx  UnlockDialog.tsx  VariableRow.tsx  VariableViewer.tsx  WelcomeScreen.tsx
app/src/data/: mock.ts
app/src/lib/: credstore.ts  init.ts  ipc.ts  totp.ts  types.ts  workspace.ts
app/src/styles/: brand.css
docs/design/: wireframes.md
docs/design/preview/: README.md  index.html
packaging/aur/: PKGBUILD  README.md
snap/: README.md  snapcraft.yaml
