[package]
name = "sealed-env-studio"
version = "0.1.0"
description = "sealed-env Studio — desktop vault manager"
authors = []
edition = "2021"

[lib]
name = "sealed_env_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5", features = ["std"] }
scrypt = "0.11"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
subtle = "2"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
